# Fastlit

./: .gitignore  README.md  pyproject.toml
.claude/memory/: streamlit_api_docs.md
docs/: API_REFERENCE.md
examples/: all_components_demo.py  all_components_docs.py  app.py  charts_demo.py  components_demo.py  data_elements_demo.py  dataframe_demo.py  hello.py  layout_demo.py  media_demo.py  widgets.py
examples/layouts/: admin.py
examples/layouts/admin/: default.py
examples/pages/: 403.py  404.py  advanced_features.py  auth_beta.py  charts.py  chat_components.py  custom_components.py  data_display.py  index.py  input_widgets.py  layout.py  media.py  page_system.py  state_control.py  status_feedback.py  streaming_fragments.py  text_elements.py
examples/pages/admin/: index.py  (+2 more)
fastlit/: __init__.py  cli.py
fastlit/cache/: __init__.py
fastlit/components/: __init__.py  v1.py
fastlit/connections/: __init__.py  base.py  sql.py
fastlit/runtime/: containers.py  context.py  dataframe_arrow.py  diff.py  navigation_slug.py  page_discovery.py  protocol.py  script_runner.py  session.py  tree.py
fastlit/server/: app.py  auth.py  dataframe_store.py  metrics.py  websocket_handler.py
fastlit/ui/: base.py  charts.py  chat.py  column_config.py  context.py  dataframe.py  fragment.py  layout.py  media.py  secrets.py  state.py  status.py  text.py  user.py  widget_value.py  widgets.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: generate_api_reference.py  load_test.py
(+129 files in other folders)
