[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastlit"
version = "0.2.0"
description = "Streamlit-compatible, blazing fast, Python-first UI framework"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.36",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dataframe = ["pyarrow>=14.0", "pandas>=2.0"]
sql = ["sqlalchemy>=2.0", "pandas>=2.0"]
auth = ["httpx>=0.25"]
dev = ["watchfiles>=0.21", "pytest>=8.0"]

[project.scripts]
fastlit = "fastlit.cli:main"
